# concurrentes-tp1

./: .gitignore  Cargo.toml  README.md
logs/: 2021-10-20 20:52:40.031877260 -03:00.txt
src/: logger.rs  main.rs  record.rs  record_manager.rs  record_manager_factory.rs  reservations.csv
src/common/: airlines.rs  helper.rs  lib.rs  record.rs  rout_info.rs  routs_stats.rs
src/parte_a/: logger.rs  main.rs  record_manager.rs  record_manager_factory.rs  routs_stats.rs
src/parte_b/: aeroservice.rs  entry_aero_success.rs  entry_failed.rs  entry_hotel_message.rs  entry_hotel_success.rs  entry_message.rs  entry_recipient.rs  hotel.rs  main.rs  orquestador.rs
src/parte_b/actors/: aero_service.rs  aeroservice.rs  benchmark.rs  cron.rs  entry_recipient.rs  hotel.rs  hotel_service.rs  logger.rs  mod.rs  orchestrator.rs  orquestador.rs
src/parte_b/messages/: aero_failed.rs  aero_success.rs  entry.rs  entry_aero_success.rs  entry_failed.rs  entry_hotel_message.rs  entry_hotel_success.rs  entry_message.rs  hotel_entry.rs  hotel_success.rs  log_message.rs  mod.rs  provide_metrics.rs  request_completed.rs
