[package]
name = "rustproject"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
std-semaphore = "0.1"
csv = "1"
rand = "0.8"
chrono = "0.4"
actix = "0.11.1"
actix-rt = "2.0" # <-- Runtime for actix

[[bin]]
name = "parte_a"
path = "src/parte_a/main.rs"

[[bin]]
name = "parte_b"
path = "src/parte_b/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"
